--- a/shstyles.css
+++ b/shstyles.css
@@ -7,12 +7,18 @@ body {
     justify-content: center;
 }
 
+div {
+    align-items: center;
+    justify-content: center;
+}
+
 canvas {
     position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
     min-height: 100%; 
+    z-index: 2;
 }
 
 #shcol1 {
@@ -21,4 +27,26 @@ canvas {
     left: 0;
     width: 100%;
     height: 100%; 
+    opacity: 0;
+    mix-blend-mode: multiply;
+}
+
+#shcol2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    mix-blend-mode: multiply;
+}
+
+#shcol3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 83%; 
+    opacity: 0;
+    mix-blend-mode: lighten;
+    z-index: 1;
 }
