--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,81 @@ body {
     padding: 0%;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     align-items: center;
     justify-content: center;
 }
 
-div {
+#space {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%; 
+    align-items: center;
+    justify-content: center;
+}
+
+#container {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 2fr 3fr 1fr;
+    grid-row-gap: 0;
+    perspective: 640px;
+    perspective-origin: center;
+}
+
+a {
+    margin: 0%;
+    padding: 0%;
     align-items: center;
     justify-content: center;
 }
 
 canvas {
     position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%; 
-    z-index: 2;
+    grid-row: 2/2;
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    transform-style: preserve-3d;
+    opacity: 0.8;
+    box-shadow: 15px 35px 35px #888888;
+    transition: 0.1s;
+}
+
+#cv1{
+    grid-column: 1/2;
+    transform: rotateY(40deg) translateZ(-330px) translateX(150px);
+}
+
+#cv1:hover {
+    transform: rotateY(0deg) translateX(100px) translateZ(5px);
+    z-index: 9;
+    opacity: 1;
+}
+
+#cv2{
+    grid-column: 3/4;
+    transform: rotateY(30deg) translateZ(-315px) translateX(150px);
+}
+
+#cv2:hover {
+    transform: rotateY(0deg) translateX(-180px) translateZ(5px);
+    z-index: 9;
+    opacity: 1;
+}
+
+#cv3{
+    grid-column: 5/6;
+    transform: rotateY(20deg) translateZ(-300px) translateX(150px);
+}
+
+#cv3:hover {
+    transform: rotateY(0deg) translateX(-580px) translateZ(5px);
+    opacity: 1;
 }
