--- a/gzstyles.css
+++ b/gzstyles.css
@@ -135,4 +135,22 @@ canvas {
     z-index: 3;
 }
 
+#arrdiv{
+    position: fixed;
+    bottom: 5%;
+    left: 0%;
+    width: 10%;
+    height: 10%;
+    z-index: 9;
+}
 
+#arrow{
+    fill: grey;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+}
+
+#arrow:hover{
+    opacity: 1;
+}
