--- a/nystyles.css
+++ b/nystyles.css
@@ -19,105 +19,22 @@ canvas {
     z-index: 9;
 }
 
-/* #clouddiv {
-    position: relative;
-    top: 0;
-    left: 0;
+#arrdiv{
+    position: fixed;
+    bottom: 5%;
+    left: 0%;
+    width: 10%;
+    height: 10%;
+    z-index: 9;
+}
+
+#arrow{
+    fill: lightblue;
     width: 100%;
-    height: 100%;    
-    perspective: 150px;
+    height: 100%;
+    opacity: 0.6;
 }
 
-.cd {
-    position: absolute;
-    fill: rgb(135, 162, 212);
+#arrow:hover{
+    opacity: 1;
 }
-
-#suncloud {
-    top: 0%;
-    right: 1%;
-    width: 300px;
-    height: 200px;
-    opacity: 0.8;
-    z-index: 1;
-    animation: sunshake 20s linear alternate infinite;
-    animation-delay: 8s;
-}
-
-@keyframes sunshake {
-    0% {
-        transform: rotateZ(0deg) translateZ(5px);
-    }
-    25% {
-        transform: rotateZ(-2deg) translateZ(5px);
-    }
-    50% {
-        transform: rotateZ(0deg) translateZ(5px);
-    }
-    75% {
-        transform: rotateZ(1deg) translateZ(5px);
-    }
-    100% {
-        transform: rotateZ(0deg) translateZ(5px);
-    }
-}
-
-#cloud {
-    height: 300px;
-    width: 300px;
-    top: 2%;
-    left: 5%;
-    opacity: 0;
-    z-index: 1;
-    animation: cloudMov 18s linear infinite;
-    animation-delay: 1s;
-}
-
-@keyframes cloudMov {
-    0% {
-        transform: rotateZ(5deg) translate(20px);
-        opacity: 0;
-    }
-    25% {
-        transform: rotateZ(0deg) translateX(40px);
-        opacity: 0.8;
-    }
-    50% {
-        transform: rotateZ(-5deg) translateX(60px);
-        opacity: 0;
-    }
-    75% {
-        transform: rotateZ(0deg) translateX(80px);
-        opacity: 0.8;
-    }
-    100% {
-        transform: rotateZ(-5deg) translateX(100px);
-        opacity: 0;
-    }
-}
-
-#cloud2 {
-    height: 300px;
-    width: 500px;
-    top: 5%;
-    left: 55%;
-    transform: translateZ(-10px);
-    opacity: 0;
-    z-index: 1;
-    animation: cloudMov2 15s linear infinite;
-}
-
-@keyframes cloudMov2 {
-    0% {
-        transform: translateZ(-30px) translateX(0px) translateY(5px);
-        opacity: 0;
-    }
-    60% {
-        transform: translateZ(-10px) translateX(-5px) translateY(10px);
-        opacity: 0.8;
-    }
-    40% {
-        transform: translateZ(0px) translateX(-10px) translateY(15px);
-        opacity: 0;
-    }
-} */
