--- a/shstyles.css
+++ b/shstyles.css
@@ -50,3 +50,23 @@ canvas {
     mix-blend-mode: lighten;
     z-index: 1;
 }
+
+#arrdiv{
+    position: fixed;
+    bottom: 5%;
+    left: 0%;
+    width: 10%;
+    height: 10%;
+    z-index: 9;
+}
+
+#arrow{
+    fill: grey;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+}
+
+#arrow:hover{
+    opacity: 1;
+}
